# utils/documentation/swagger.json
@@ -151,6 +151,104 @@
           }
         }
       }
+    },
+    "/loan": {
+      "get": {
+        "tags": [
+          "loans"
+        ],
+        "summary": "Get all loans",
+        "description": "Only admin staff can get the whole list of loans",
+        "operationId": "getLoans",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Loans list",
+            "schema": {
+              "$ref": "#/definitions/Loan"
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "loans"
+        ],
+        "summary": "Apply new loan",
+        "description": "Logged users can use this method to set a new loan application",
+        "operationId": "newLoan",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "201": {
+            "description": "Loan setted",
+            "schema": {
+              "$ref": "#/definitions/Loan"
+            }
+          }
+        }
+      }
+    },
+    "/loan/{loanId}": {
+      "get": {
+        "tags": [
+          "loans"
+        ],
+        "summary": "Get one loan data",
+        "description": "Admin users can get all loans data, but regular users can get only their loans under their same user id.",
+        "operationId": "getLoan",
+        "parameters": [
+          {
+            "name": "loanId",
+            "in": "path",
+            "description": "ID of the loan to return",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Loan",
+            "schema": {
+              "$ref": "#/definitions/Loan"
+            }
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "loans"
+        ],
+        "summary": "Aprove - reject co-signed loans.",
+        "description": "Use this method to approve or reject co-signed loans. Users can only modify loans under the respective account.",
+        "operationId": "approveLoanCoSing",
+        "parameters": [
+          {
+            "name": "loanId",
+            "in": "path",
+            "description": "ID loan to be modified",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "contains data to make the operation",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Loan"
+            }
+          }
+        ]
+      }
     }
   },
   "definitions": {
@@ -172,6 +270,43 @@
         },
         "phone": {
           "type": "string"
+        }
+      }
+    },
+    "Loan": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "fecha_inicial": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "num_cuotas": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "deudor_id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "estado": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "monto": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "fecha_registro": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "pagado": {
+          "type": "integer",
+          "format": "int64"
         }
       }
     }
